Completed index twig

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -23,11 +23,17 @@
     {% block trois_points %}
         {{ include('MTLBundle:Default:trois_points.html.twig') }}
     {% endblock %}
+    {% block produits %}
+        {{ include('MTLBundle:Default:produits.html.twig') }}
+    {% endblock %}
     {% block sectionImage %}
         {{ include('MTLBundle:Default:sectionImage.html.twig') }}
     {% endblock %}
     {% block actu %}
         {{ include('MTLBundle:Default:actu.html.twig') }}
+    {% endblock %}
+    {% block formulaire %}
+        {{ include('MTLBundle:Default:formulaire.html.twig') }}
     {% endblock %}
     {% block footer %}
         {{ include('MTLBundle:Default:footer.html.twig') }}
