Changing in produits html.twig & css

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -42,23 +42,45 @@
 <div class="container-fluid banner_motifs">
     <!-- Ligne A -->
     <div class="row">
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
+        <div>
+            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+        </div>
+
+        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+
     </div>
 
-    <!-- Ligne B -->
-    <div class="row">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        <div class="colors col-xs-6 col-sm-6 col-md-2 col-lg-2col-md-2"></div>
-        <img class="img-responsive img-thumbnail col-xs-6 col-sm-6 col-md-2 col-lg-2" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-    </div>
+
 
 </div>
 
