--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -41,20 +41,20 @@
 .banner_motifs {
     margin:50px 0px 50px 0px;
     padding: 0 0 0 0;
+    height:100%;
 }
 
 .banner_motifs img {
-    width:100%
-    height: 100%;
+    width:
+    height:100%;
     border-radius : 0px;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 }
 
 .colors {
-    display: inline-block;
-    background-color: floralwhite;
-    width: 100%;
-    height: 100%;
+    background-color: cadetblue;
+    height: ;
+    padding: 0 0 0 0;
 }
 
