--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>News creation</h1>
+    <h1>Actu creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('news_index') }}">Back to the list</a>
+            <a href="{{ path('actu_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
