minor changes css

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -22,7 +22,7 @@
             <small><a  class="legendecarte" target="_blank" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">Ouvrir la carte dans un nouvel onglet</a></small>
         </div>
         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-            <form method="post" action="formPost.php">
+            <form method="post" class="form" action="formPost.php">
                 <div class="form-group">
                     <input type="Nom" class="form-control input-lg" id="Nom" placeholder="Nom *" aria-label="Votre nom"
                            required><br/>
