--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -40,47 +40,57 @@
 
 <!-- bannière de motifs -->
 <div class="container-fluid banner_motifs">
-    <!-- Ligne A -->
     <div class="row">
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+        <ul>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors"></article>
+            </li>
 
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-6 col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors1"></article>
+            </li>
 
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors2"></article>
+            </li>
 
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors"></article>
+            </li>
 
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors1"></article>
+            </li>
 
-        <div>
-            <img class="img-responsive img-thumbnail col-xs-3 col-sm-3 col-md-1 col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-        </div>
+            <li>
+                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
+            </li>
 
-        <div class="colors col-xs-hidden col-sm-3 col-md-1 col-lg-1"></div>
-
+            <li>
+                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors2"></article>
+            </li>
+        </ul>
     </div>
-
-
 
 </div>
 
