separate navbar & header

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -17,6 +17,9 @@
     {% block header %}
         {{  include('MTLBundle:Default:header.html.twig') }}
     {% endblock %}
+    {% block navbar %}
+        {{ include('MTLBundle:Default:navBar.html.twig') }}
+    {% endblock %}
     {% block philo %}
         {{ include('MTLBundle:Default:notre_philosophie.html.twig') }}
     {% endblock %}
