--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -1,3 +1,4 @@
+<img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
 <div class="container-fluid">
     <div class="row">
         <div class="hidden-xs sectionImage">
