--- a/m-tourisme/web/css/mTourisme.css
+++ b/m-tourisme/web/css/mTourisme.css
@@ -1,10 +1,10 @@
-.iphone {
+/*.iphone {
     position: relative;
-    top: 190px;
+    top: 190%;
     left: 50%;
     width: 35%;
     height: 35%;
-}
+}*/
 
 p {
     font-size: 150%;
