--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -39,7 +39,7 @@
 
 /* Bannière motifs */
 .banner_motifs {
-    margin:5% 0px 0px 0px;
+    margin:5% 0px -10% 0px;
     height:;
     display: block;
 }
