--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/styleNew.css')}}">
+{% endblock %}
 {% block body %}
     <h1>actu creation</h1>
 
