--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/styleShow.css')}}">
+{% endblock %}
 {% block body %}
     <h1>actu</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Actu N°</th>
                 <td>{{ actu.id }}</td>
             </tr>
             <tr>
