--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -1,12 +1,22 @@
-<img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
+
 <div class="container-fluid">
-    <div class="row">
-        <div class="hidden-xs sectionImage">
-            <div class="col-xs-offset-2 col-xs-8">
+    <div class="hidden-xs sectionImage">
+        <div class="row">
+            <div class="col-xs-offset-2 col-xs-4">
                 <br/><br/>
                 <img class="guillemets" src="{{ asset ('image/guillemets up.png')}}" alt="image guillemets">
+            </div>
+            <div class="col-xs-5">
+                <img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
                 <p class="textImage">Redécouvrez ce que vous voyez tous les jours</p>
             </div>
+        </div>
+        <br/><br/><br/><br/><br/><br/>
+        <div class="row">
             <div class="col-xs-offset-10 col-xs-2">
                 <img class="guillemetsdown" src="{{ asset ('image/guillemets down.png')}}" alt="image guillemets">
             </div>
