--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -11,14 +11,12 @@
 	font-family: 'DIN';
 	text-align: center;
 	margin: auto;
-	padding-top: 12%;
 	font-size: 420%;
 	color: #000;
 }
 
 .guillemets {
-	width: 12%;
-	height: 32%;
+	width: 24%;
 }
 
 .guillemetsdown {
@@ -28,7 +26,7 @@
 
 .iphone {
 	position: relative;
-	left: 50%;
-	width: 35%;
-	height: 35%;
+	bottom: 140px;
+	left: 30%;
+	width: 65%;
 }
