--- a/m-tourisme/web/css/stylesheetHeader.css
+++ b/m-tourisme/web/css/stylesheetHeader.css
@@ -19,27 +19,251 @@ Header p {
 }
 
 .logo_header {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin-top:7% ;
+    margin-bottom: 5%;
 }
 
 .logo_header img  {
-    width: 315px;
-    height:315px ;
-    right: -300px;
+    width: 70%;
+    height: 70%;
+    right: -30%;
+    top: -30px;
     position: relative;
 }
 
 .logo_text {
-    padding-top: 160px;
-    padding-bottom: 160px;
-    left: -150px;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    left: -10%;
 }
 
 .logo_text p {
     letter-spacing: 8px;
     line-height: 0.5;
-    font-size: 2.7em;
+    font-size: 250%;
+}
+
+@media screen and (max-width:1580px ){
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+    }
+
+    .logo_header img  {
+        width: 70%;
+        height: 70%;
+        right: -20px;
+        top: -20px;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+        left: -10%;
+    }
+
+    .logo_text p {
+        letter-spacing: 8px;
+        line-height: 0.5;
+        font-size: 250%;
+    }
+}
+
+@media screen and (max-width:1285px ){
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+    }
+
+    .logo_header img  {
+        width: 70%;
+        height: 70%;
+        right: 15%;
+        top : 5%;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+        left: -10%;
+    }
+
+    .logo_text p {
+        letter-spacing: 8px;
+        line-height: 0.5;
+        font-size: 250%;
+    }
+}
+
+@media screen and (max-width:990px ) {
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+    }
+
+    .logo_header img  {
+        width: 100%;
+        height: 100%;
+        right: -45%;
+        top: ;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+        left: -10%;
+    }
+
+
+    .logo_text p {
+        letter-spacing: 6px;
+        line-height: 1.5;
+        font-size: 175%;
+    }
+}
+
+@media screen and (max-width:800px ) {
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+        height: 200%;
+    }
+
+    .logo_header img  {
+        width: 200%;
+        height: 200%;
+        right: -30% ;
+        top: -5% ;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+        left: -10%;
+    }
+
+
+    .logo_text p {
+        letter-spacing: 6px;
+        line-height: 1.5;
+        font-size: 135%;
+    }
+}
+
+@media screen and (max-width:768px ) {
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+        height: 200%;
+    }
+
+    .logo_header img  {
+        width: 45%;
+        height: 45%;
+        right: 25px ;
+        top: -5% ;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+        left: -10%;
+        top: -50px;
+    }
+
+
+    .logo_text p {
+        letter-spacing: 6px;
+        line-height: 1.5;
+        font-size: 1.8em;
+    }
+}
+
+@media screen and (max-width:360px ) {
+    Header h1 {
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+    }
+
+    Header p {
+        font-family: 'DIN-Light', 'Courgette';
+    }
+
+    .logo_header {
+        margin-top:7% ;
+        margin-bottom: 5%;
+        height: 200%;
+    }
+
+    .logo_header img  {
+        width: 50%;
+        height: 50%;;
+        top: -5% ;
+        right: 0%;
+        position: relative;
+    }
+
+    .logo_text {
+        padding-top: 10%;
+        padding-bottom: 7%;
+    }
+
+
+    .logo_text p {
+        letter-spacing: 6px;
+        line-height: 1.2;
+        font-size: 130%;
+    }
 }
 
 .logoHeader {
