add link to list news

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -6,11 +6,10 @@
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         </ol>
-
+        <h1 class="orange">Actualités</h1>
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <h1 class="orange">Actualités</h1>
                 <div class="row slide">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h2>Actu 1</h2>
@@ -52,7 +51,6 @@
                 </div>
             </div>
             <div class="item">
-                <h1 class="orange">Actualités</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h2>Actu 1</h2>
@@ -92,7 +90,6 @@
                 </div>
             </div>
             <div class="item">
-                <h1 class="orange">Actualités</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h2>Actu 1</h2>
@@ -144,4 +141,5 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <p><a href="listeactu">Voir la liste de toutes nos actualités</a></p>
 </div>
