--- a/m-tourisme/web/css/stylesheetListeActu.css
+++ b/m-tourisme/web/css/stylesheetListeActu.css
@@ -1,4 +1,4 @@
-.sectionListeActu {
+body {
     background-image: url("../image/game-image-opaque.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,17 +7,11 @@
 
 .container {
     background-color: RGBA(255, 255, 255, 0.7);
-    border-left: solid 1px black;
-    border-right: solid 1px black ;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    border: solid 1px black;
     text-align: center;
-}
-
-/*.block-actu {
     margin-top: 5%;
+    margin-bottom: 5%;
 }
-*/
 
 .titreActualités {
     text-decoration: underline;
