--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -30,6 +30,13 @@
                         {% endfor %}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>
+                            <a href="index">Retour au site</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     {% endblock %}
