update link index to listactu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -141,5 +141,5 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <p><a href="listeactu">Voir la liste de toutes nos actualités</a></p>
+    <p class="goToList"><a href="listeactu">Voir la liste de toutes nos actualités</a></p>
 </div>
