--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>
+                        <p class="back">
                             <a href="index">Retour au site</a>
                         </p>
                     </div>
