create layout for listActu and upload image

--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -4,25 +4,24 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleEdit.css')}}">
 {% endblock %}
 {% block body %}
-            <div class="form">
+            <div class="container form">
                 <h1>Editer une Actu</h1>
 
                 {{ form_start(edit_form) }}
-                    {{ form_widget(edit_form) }}
+               {{ form_widget(edit_form) }}
                     <input type="submit"  value="Edit" />
-                {{ form_end(edit_form) }}
+               {{ form_end(edit_form) }}
 
-
-                <ul>
-                    <li>
-                        <a href="{{ path('actu_index') }}">Back to the list</a>
-                    </li>
-                    <li>
-                        {{ form_start(delete_form) }}
-                            <input type="submit" value="Delete">
-                        {{ form_end(delete_form) }}
-                    </li>
-                </ul>
+                   <ul>
+                        <li>
+                            <a href="{{ path('actu_index') }}">Back to the list</a>
+                        </li>
+                        <li>
+                            {{ form_start(delete_form) }}
+                                <input type="submit" value="Delete">
+                            {{ form_end(delete_form) }}
+                        </li>
+                   </ul>
             </div>
 
 {% endblock %}
