--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ actu.image }}</td>
+                <td><img src="{{ asset('upload/' ~ actu.image) }}" alt=""/></td>
             </tr>
         </tbody>
     </table>
