--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -30,7 +30,8 @@
         {{ include('MTLBundle:Default:produits.html.twig') }}
     {% endblock %}
 
-        <img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
+       <!-- <img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone
+       geomotifs"> -->
 
     {% block sectionImage %}
         {{ include('MTLBundle:Default:sectionImage.html.twig') }}
