--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -1,17 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
     {% block stylesheets %}
-        {{ parent() }}
+        <!-- Bootstrap -->
+        <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
         <!-- CSS Perso -->
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetListeActu.css')}}">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheetHeader.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetListeActu.css')}}">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/fonts.css')}}">
     {% endblock %}
 
-{% block body %}
-    {% block header %}
-        {{  include('MTLBundle:Default:header.html.twig') }}
-    {% endblock %}
+
     {% block listeActu %}
         <div class="sectionListeActu">
             <div class="container">
@@ -25,7 +26,7 @@
                         {% for actu in actus %}
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
-                            <p class="img-responsive img-actu">{{ actu.image }}<br/><a href="#">En lire plus...</a></p>
+                            <p class="img-responsive img-actu">{{ asset('upload/' ~ actu.image) }}<br/><a href="#">En lire plus...</a></p>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
                         {% endfor %}
                     </div>
@@ -40,7 +41,5 @@
             </div>
         </div>
     {% endblock %}
-    {% block footer %}
-        {{ include('MTLBundle:Default:footer.html.twig') }}
-    {% endblock %}
-{% endblock %}
+
+
