--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -12,22 +12,24 @@
     {% block header %}
         {{  include('MTLBundle:Default:header.html.twig') }}
     {% endblock %}
+
     {% block listeActu %}
         <div class="sectionListeActu">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="titreActualités">Actualités</h1>
+                        <h1 class="titreActualités">Actualité</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        {% for actu in actus %}
+
+                            <h2 class="titreActu">Actualité n° {{ actu.id }}</h2>
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
-                            <p class="img-responsive img-actu">{{ actu.image }}<br/><a href="afficheractu">En lire plus...</a></p>
+                            <p class="img-responsive img-actu">{{ actu.image }}<br/></p>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
-                        {% endfor %}
+
                     </div>
                 </div>
                 <div class="row">
@@ -40,6 +42,7 @@
             </div>
         </div>
     {% endblock %}
+
     {% block footer %}
         {{ include('MTLBundle:Default:footer.html.twig') }}
     {% endblock %}
