--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -25,7 +25,7 @@
                         {% for actu in actus %}
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
-                            <p class="img-responsive img-actu">{{ actu.image }}<br/><a href="afficheractu">En lire plus...</a></p>
+                            <p class="img-responsive img-actu">{{ actu.image }}<br/><a href="#">En lire plus...</a></p>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
                         {% endfor %}
                     </div>
