--- a/m-tourisme/app/Resources/views/base.html.twig
+++ b/m-tourisme/app/Resources/views/base.html.twig
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}m-Tourisme Ludique{% endblock %}</title>
+
+        <!-- FavIcon -->
+        <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
+
     {% block stylesheets %}
         <!-- Bootstrap -->
         <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
