--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -39,7 +39,7 @@
 </div>
 
 <!-- bannière de motifs -->
-<div class="container-fluid banner_motifs">
+<!--<div class="container-fluid banner_motifs">
     <div class="row">
         <ul>
             <li>
@@ -90,7 +90,7 @@
                 <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors2"></article>
             </li>
         </ul>
-    </div>
+    </div> -->
 
 </div>
 
