--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col-lg-12">
 
-                            <h2 class="titreActu">Actualité n° {{ actu.id }}</h2>
+                            {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
                             <p class="img-responsive img-actu">{{ actu.image }}<br/></p>
