--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -39,7 +39,7 @@
 </div>
 
 <!-- bannière de motifs -->
-<div class="container-fluid banner_motifs">
+<!-- <div class="container-fluid banner_motifs">
     <div class="row">
         <ul>
             <li>
@@ -92,7 +92,7 @@
         </ul>
     </div>
 
-</div>
+</div> -->
 
 </div>
 </div>
