Changed link oneActu to listeactu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -1,12 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
     {% block stylesheets %}
-        {{ parent() }}
+        <!-- Bootstrap -->
+        <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
         <!-- CSS Perso -->
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetListeActu.css')}}">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheetHeader.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetListeActu.css')}}">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/fonts.css')}}">
     {% endblock %}
+
 
 {% block body %}
     {% block header %}
@@ -35,7 +40,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p class="back">
-                            <a href="index">Retour au site</a>
+                            <a href=" {{ path('liste_actu') }}">Retour au site</a>
                         </p>
                     </div>
                 </div>
