--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -15,27 +15,10 @@
                         {% for actu in actus %}
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
-                            <p class="img-responsive img-actu">{{ asset('upload/' ~ actu.image) }}<br/><a href="">En lire plus...</a></p>
+                            <p class="img-responsive img-actu">{{ asset('upload/' ~ actu.image) }}<br/><a href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
                         {% endfor %}
                     </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <h2>Actu 3</h2>
-                        <div class="lens">
-                            <img src="{{ asset('image/P1030919rond.png')}}" class="img-responsive imgInLens" alt="gargouille">
-                            <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
-                        </div>
-                        <p class="txtActu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit.<br/><br/>
-                            <a class="orange" href="#">En lire plus...</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel-caption">
                 </div>
             </div>
             <!-- Insérer ici un nouveau slide -->
