--- a/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
@@ -1,30 +1,32 @@
 <header>
-    <div class="backgroundHeader" id="ancreHome" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-hidden col-xs-offset-0
-                            col-sm-4 col-sm-offset-0
-                            col-md-3 col-md-offset-0
-                            col-lg-3 col-lg-offset-1 logo_header">
-                    <img class="img-responsive logoHeader" src="{{ asset ('image/logoMblanc.png')}}" alt="Logo
-                    mTourimse-Ludique">
-                </div>
-
-            <!-- logo apparait qu'en xs -->
-                <!-- <div class="row">
-                    <div class="col-xs-12 col-sm-hidden col-md-hidden col-lg-hidden">
-                        <img class="img-responsive" src="{{ asset ('image/logoMblanc.png')}}" alt="LogomTourimse-Ludique">
+    <a href="index" class="lien_header">
+        <div class="backgroundHeader" id="ancreHome" >
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-hidden col-xs-offset-0
+                                col-sm-4 col-sm-offset-0
+                                col-md-3 col-md-offset-0
+                                col-lg-3 col-lg-offset-1 logo_header">
+                            <img class="img-responsive logoHeader" src="{{ asset ('image/logoMblanc.png')}}" alt="Logo
+                        mTourimse-Ludique">
                     </div>
-                </div> -->
 
-                <div class="col-xs-12 col-xs-offset-1
-                            col-sm-7 col-sm-offset-1
-                            col-md-9 col-md-offset-0
-                            col-lg-8 col-lg-offset-0 logo_text">
-                    <h1 class="marque">Tourisme Ludique</h1><br/>
-                    <p class="slogan">CREATION D'USAGES MOBILES</p><br/>
+                <!-- logo apparait qu'en xs -->
+                    <!-- <div class="row">
+                        <div class="col-xs-12 col-sm-hidden col-md-hidden col-lg-hidden">
+                            <img class="img-responsive" src="{{ asset ('image/logoMblanc.png')}}" alt="LogomTourimse-Ludique">
+                        </div>
+                    </div> -->
+
+                    <div class="col-xs-12 col-xs-offset-1
+                                col-sm-7 col-sm-offset-1
+                                col-md-9 col-md-offset-0
+                                col-lg-8 col-lg-offset-0 logo_text">
+                        <h1 class="marque">Tourisme Ludique</h1><br/>
+                        <p class="slogan">CREATION D'USAGES MOBILES</p><br/>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </a>
 </header>
