Style listeactu & oneActu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
@@ -8,7 +8,7 @@
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <a class="lienFooter" href="#ancreMetier" id="metier">Notre métier</a><br/>
                 <a class="lienFooter" href="#ancreProduit" id="produit">Géomotifs</a><br/>
-                <a class="lienFooter" href="#ancreActu" id="actu">Actualité</a><br/>
+                <a class="lienFooter" href="#ancreActu" id="actu">Actualités</a><br/>
                 <a class="lienFooter" href="#ancreForm" id="nousContacter">Nous contacter</a>
 
             </div>
