--- a/m-tourisme/web/css/stylesheetListeActu.css
+++ b/m-tourisme/web/css/stylesheetListeActu.css
@@ -15,9 +15,34 @@ body {
 }
 
 .titreActualités {
-    text-decoration: underline;
+    text-transform: uppercase;
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-weight: bold ;
+}
+
+.titreActu {
+    color: #EE6616;
+    font-family: 'DIN-Light', 'Courgette';
+    font-weight: bold ;
+}
+
+.contenu {
+    font-size: 180%;
+    font-family: 'DIN-Light', 'Courgette';
+}
+
+.date {
+    font-size: 120%;
 }
 
 .back {
     text-align: left;
+}
+
+hr {
+    color: #EE6616;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(238, 102, 22, 0.75), rgba(0, 0, 0, 0));
+
 }
