--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -32,7 +32,7 @@
                             {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
                             <h2 class="titreActu">{{ actu.titre }}</h2>
                             <p class="contenu">{{ actu.contenu }}</p>
-                            <p class="img-responsive img-actu">{{ actu.image }}<br/></p>
+                            <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive img-actu"><br/>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
 
                     </div>
