--- a/m-tourisme/src/AdminBundle/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 {% block stylesheets %}
     <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleEdit.css')}}">
