--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -3,16 +3,16 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleNew.css')}}">
 {% endblock %}
 {% block body %}
-    <h1>actu creation</h1>
+    <h1>Création d'une actualité</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Créer" />
     {{ form_end(form) }}
 
     <ul>
         <li>
-            <a href="{{ path('actu_index') }}">Back to the list</a>
+            <a href="{{ path('actu_index') }}">Revenir à la liste</a>
         </li>
     </ul>
 {% endblock %}
