--- a/m-tourisme/src/AdminBundle/Resources/views/actu/new.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/new.html.twig
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleNew.css')}}">
 {% endblock %}
 {% block body %}
-    <h1>actu creation</h1>
+    <h1>Création d'une nouvelle actualité</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -12,7 +12,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('actu_index') }}">Back to the list</a>
+            <a href="{{ path('actu_index') }}">Revenir à la liste</a>
         </li>
     </ul>
 {% endblock %}
