--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleShow.css')}}">
 {% endblock %}
 {% block body %}
-    <h1>actu</h1>
+    <h1>Actualité</h1>
 
     <table>
         <tbody>
@@ -32,14 +32,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('actu_index') }}">Back to the list</a>
+            <a href="{{ path('actu_index') }}">Revenir à la liste</a>
         </li>
         <li>
-            <a href="{{ path('actu_edit', { 'id': actu.id }) }}">Edit</a>
+            <a href="{{ path('actu_edit', { 'id': actu.id }) }}">Modifier</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Supprimer">
             {{ form_end(delete_form) }}
         </li>
     </ul>
