--- a/m-tourisme/src/AdminBundle/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/edit.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
             <div class="form">
-                <h1>Editer une Actu</h1>
+                <h1>Editer une actualité</h1>
 
                 {{ form_start(edit_form) }}
                     {{ form_widget(edit_form) }}
@@ -15,7 +15,7 @@
 
                 <ul>
                     <li>
-                        <a href="{{ path('actu_index') }}">Back to the list</a>
+                        <a href="{{ path('actu_index') }}">Revenir à la liste</a>
                     </li>
                     <li>
                         {{ form_start(delete_form) }}
