--- a/m-tourisme/src/AdminBundle/Resources/views/actu/index.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/index.html.twig
@@ -27,10 +27,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('actu_show', { 'id': actu.id }) }}">show</a>
+                            <a href="{{ path('actu_show', { 'id': actu.id }) }}">Aperçu</a>
                         </li>
                         <li>
-                            <a href="{{ path('actu_edit', { 'id': actu.id }) }}">edit</a>
+                            <a href="{{ path('actu_edit', { 'id': actu.id }) }}">Modifier</a>
                         </li>
                     </ul>
                 </td>
@@ -41,7 +41,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('actu_new') }}">Create a new entry</a>
+            <a href="{{ path('actu_new') }}">Ajouter une nouvelle actualité</a>
         </li>
     </ul>
 {% endblock %}
