--- a/m-tourisme/src/AdminBundle/Resources/views/actu/show.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ actu.image }}</td>
+                <td><img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive img-actu"></td>
             </tr>
         </tbody>
     </table>
